--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 “I came to have a look because the lights were still on,” Zhong Zhidong explained.“Apparently I’m not the only one concerned about the senior citizens’ recreation center,” Ms. Wen said.“Naturally. We’re always concerned about this center,”Zhong Zhidong said firmly."></div>
              </div>
 
-             <a href="file:///Users/julieyeung/Documents/link4/index.html" target="_blank">
+             <a href="https://julieyeung.github.io/euphoria_once-more/" target="_blank">
              <div class="quote1" data-text="and said distinctly,"></div>
             </a>
 
