--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Smooch+Sans:wght@100..900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 <body>
-    <div data-layer="Desktop - 7" class="Desktop7" style="width: 1440px; height: 1024px; position: relative; background: white">
+    <div data-layer="Desktop - 7" class="Desktop7" style="width: 1440px; height: 1024px; position: relative; background: #C4862D">
 
     <div class="container">
         <div class="rectangle1"></div>
